--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
